# eeginfra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark.py
docs/: API.md
examples/: inference_demo.py  pretrain_ssl.py  train_psychiatric.py
neuroformer/: __init__.py  cli.py  config.py
neuroformer/data/: __init__.py  dataset.py  mne_loader.py  samplers.py
neuroformer/inference/: __init__.py  explainability.py  predictor.py
neuroformer/models/: __init__.py  attention.py  embeddings.py  ensemble.py  gnn_layers.py  neuroformer.py  transformer.py
neuroformer/preprocessing/: __init__.py  augmentation.py  features.py  filters.py
neuroformer/pretraining/: __init__.py  contrastive.py  masked.py
neuroformer/training/: __init__.py  cross_validation.py  losses.py  metrics.py  trainer.py  tuning.py
neuroformer/utils/: __init__.py  checkpoint.py  exceptions.py  logging.py  validation.py
neuroformer/viz/: __init__.py
tests/: __init__.py  conftest.py  test_models.py  test_preprocessing.py
